# wruff

./: .editorconfig  .envrc  .gitignore  Cargo.toml  README.md  bacon.toml  flake.nix  rust-toolchain.toml
.githooks/: pre-commit
crates/wruff/: Cargo.toml
crates/wruff-api/: Cargo.toml
crates/wruff-api/src/: error.rs  main.rs
crates/wruff-bot/: Cargo.toml
crates/wruff-bot/src/: main.rs
crates/wruff/src/: lib.rs
src/: main.rs
