[package]
name = "wruff"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = { version = "0.6.1" }
dotenvy = { git = "https://github.com/allan2/dotenvy", branch = "main", features = [
    "macros",
] }
tokio = { version = "1.44.1", features = ["full"] }
bollard = "0.19.4"

reqwest = "0.12.24"

mc-query = "2.0.0"

thiserror = "2.0.17"
anyhow = "1.0.97"

serde = { version = "1.0.219", features = ["derive"] }
serde_default_utils = { version = "0.3.1", features = ["inline"] }
toml = "0.9.8"
strum = { version = "0.27.1", features = ["derive"] }

sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "macros",
    "chrono",
    "mysql",
] }
uuid = { version = "1.15.1", features = ["v4"] }
chrono = { version = "0.4.40", features = ["serde"] }

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
