[package]
name = "wruff-api"
version = "0.1.0"

edition = "2021"

[dependencies]
wruff = { path = "../wruff" }

tracing = { version = "0.1.43" }
tracing-subscriber = "0.3.22"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.7"

dotenvy = { git = "https://github.com/allan2/dotenvy", branch = "main", features = [
    "macros",
] }

thiserror = "2.0.17"
